{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 27,
  "lineage": "fb5957bc-8ea1-9171-6ad9-96f0425ccc45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-test-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:internet-gateway/igw-003a35145b277832c",
            "id": "igw-003a35145b277832c",
            "owner_id": "891564155871",
            "tags": {
              "Name": "virgo-eks-test"
            },
            "tags_all": {
              "Name": "virgo-eks-test"
            },
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "dependencies": [
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-test-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:route-table/rtb-0571a2a7d84ec1e67",
            "id": "rtb-0571a2a7d84ec1e67",
            "owner_id": "891564155871",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003a35145b277832c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks-test-gw",
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-test-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfea926c934d33cf",
            "route_table_id": "rtb-0571a2a7d84ec1e67",
            "subnet_id": "subnet-0c137a50c5e43d140"
          },
          "dependencies": [
            "aws_internet_gateway.eks-test-gw",
            "aws_route_table.eks-test-rt",
            "aws_subnet.eks-test-subnet",
            "aws_vpc.eks-test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025955018cbe34884",
            "route_table_id": "rtb-0571a2a7d84ec1e67",
            "subnet_id": "subnet-0393ba9d097e4b6a7"
          },
          "dependencies": [
            "aws_internet_gateway.eks-test-gw",
            "aws_route_table.eks-test-rt",
            "aws_subnet.eks-test-subnet",
            "aws_vpc.eks-test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-test-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:security-group/sg-032ebf1ef64b8ad08",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032ebf1ef64b8ad08",
            "ingress": [],
            "name": "virgo-eks-test-cluster",
            "name_prefix": "",
            "owner_id": "891564155871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "virgo-eks-test"
            },
            "tags_all": {
              "Name": "virgo-eks-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-test-nodegroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:security-group/sg-01e5d4da3010222f3",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e5d4da3010222f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-032ebf1ef64b8ad08"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032ebf1ef64b8ad08"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control      plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032ebf1ef64b8ad08"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-eks-test-node",
            "name_prefix": "",
            "owner_id": "891564155871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "owned"
            },
            "tags_all": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-test-cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-341238732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01e5d4da3010222f3",
            "security_group_rule_id": "sgr-0813c39d76cd5a28f",
            "self": false,
            "source_security_group_id": "sg-032ebf1ef64b8ad08",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-test-cluster-sg",
            "aws_security_group.eks-test-nodegroup",
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-test-node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control      plane",
            "from_port": 1025,
            "id": "sgrule-516210513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01e5d4da3010222f3",
            "security_group_rule_id": "sgr-015d5a77bfa5af8cd",
            "self": false,
            "source_security_group_id": "sg-032ebf1ef64b8ad08",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-test-cluster-sg",
            "aws_security_group.eks-test-nodegroup",
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-test-node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2399553972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01e5d4da3010222f3",
            "security_group_rule_id": "sgr-01a334ab03db24e55",
            "self": false,
            "source_security_group_id": "sg-032ebf1ef64b8ad08",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-test-cluster-sg",
            "aws_security_group.eks-test-nodegroup",
            "aws_vpc.eks-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:subnet/subnet-0c137a50c5e43d140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c137a50c5e43d140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891564155871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            },
            "tags_all": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            },
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "dependencies": [
            "aws_vpc.eks-test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:subnet/subnet-0393ba9d097e4b6a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393ba9d097e4b6a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891564155871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            },
            "tags_all": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            },
            "vpc_id": "vpc-05e62823aa10c4cda"
          },
          "dependencies": [
            "aws_vpc.eks-test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891564155871:vpc/vpc-05e62823aa10c4cda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be83f8d670a4dd8a",
            "default_route_table_id": "rtb-07423f95d6899bf0c",
            "default_security_group_id": "sg-06803e77cbff3a1bf",
            "dhcp_options_id": "dopt-066b90ed46ecd07ee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e62823aa10c4cda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07423f95d6899bf0c",
            "owner_id": "891564155871",
            "tags": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            },
            "tags_all": {
              "Name": "virgo-eks-test-node",
              "kubernetes.io/cluster/virgo-eks-test": "shared"
            }
          }
        }
      ]
    }
  ]
}